objects/SupportData__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Support Data</relationshipLabel>
        <relationshipName>Support_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Support Data</relationshipLabel>
        <relationshipName>Support_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>For use with Product Selection Rules, specifies the type of action to be performed on the Product.</description>
        <inlineHelpText>For use with Product Selection Rules, specifies the type of action to be performed on the Product.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enable &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Disable &amp; Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Support Data</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Support Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>